feat: activate and inactivate dish
