# src/main/java/com/pragma/powerup/application/handler/IDishHandler.java
@@ -1,6 +1,7 @@
 package com.pragma.powerup.application.handler;
 
 import com.pragma.powerup.application.dto.request.DishRequestDto;
+import com.pragma.powerup.application.dto.request.DishStatusRequestDto;
 import com.pragma.powerup.application.dto.request.DishUpdateRequestDto;
 import com.pragma.powerup.application.dto.response.DishResponseDto;
 
@@ -8,4 +9,6 @@ public interface IDishHandler {
     DishResponseDto createDish(Long restaurantId, DishRequestDto request);
 
     DishResponseDto updateDish(Long restaurantId, Long dishId, DishUpdateRequestDto request);
+
+    DishResponseDto updateDishStatus(Long restaurantId, Long dishId, DishStatusRequestDto request);
 }
